# Rustforge-Starter

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  console
app/: AGENTS.md  Cargo.toml  build.rs  configs.toml  permissions.toml
app/models/: admin.rs  audit_log.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  crypto_network.rs  deposit.rs  introducer_change.rs  user.rs  user_credit_transaction.rs  withdrawal.rs
app/schemas/: admin.toml  content_page.toml
app/src/: lib.rs
app/src/contracts/: AGENTS.md  mod.rs
app/src/contracts/api/v1/: admin.rs  admin_auth.rs
app/src/contracts/api/v1/admin/: account.rs  auth.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  country.rs  crypto_network.rs  deposit.rs  developer_logs.rs  hierarchy.rs  introducer_change.rs  mod.rs  notification.rs  tiptap_upload.rs  user.rs  user_credit.rs  withdrawal.rs
app/src/contracts/api/v1/user/: auth.rs  mod.rs  team.rs
app/src/contracts/datatable/admin/: account.rs  admin.rs  audit_log.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  country.rs  crypto_network.rs  deposit.rs  http_client_log.rs  introducer_change.rs  mod.rs  sql_profiler_query.rs  sql_profiler_request.rs  user.rs  user_credit_transaction.rs  webhook_log.rs  withdrawal.rs
app/src/contracts/types/: username.rs
app/src/internal/: mod.rs
app/src/internal/api/: AGENTS.md  datatable.rs  mod.rs  state.rs
app/src/internal/api/v1/: admin.rs  admin_auth.rs  mod.rs
app/src/internal/api/v1/admin/: account.rs  auth.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  content_page_multipart.rs  country.rs  crypto_network.rs  deposit.rs  developer_logs.rs  hierarchy.rs  introducer_change.rs  mod.rs  notification.rs  receipt_upload.rs  tiptap_upload.rs  user.rs  (+2 more)
app/src/internal/config/: deposit.rs  withdrawal.rs
app/src/internal/datatables/: AGENTS.md  admin.rs  mod.generated.rs  mod.rs
app/src/internal/jobs/: AGENTS.md  mod.rs
app/src/internal/middleware/: AGENTS.md  auth.rs
app/src/internal/observers/: audit.rs  mod.rs  model.rs
app/src/internal/observers/models/: admin.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  country.rs  crypto_network.rs  deposit.rs  introducer_change.rs  mod.rs  user.rs  user_credit_transaction.rs  withdrawal.rs
app/src/internal/realtime/: AGENTS.md  mod.rs
app/src/internal/workflows/: AGENTS.md  admin.rs  admin_auth.rs  bank.rs  company_bank_account.rs  company_crypto_account.rs  content_page.rs  country.rs  crypto_network.rs  deposit.rs  introducer_change.rs  mod.rs  notification.rs  user_auth.rs  user_credit.rs  user_manage.rs  user_team.rs  withdrawal.rs
app/src/seeds/: AGENTS.md  admin_bootstrap_seeder.rs  content_page_bootstrap_seeder.rs  countries_seeder.rs  mod.rs  user_bootstrap_seeder.rs
app/src/validation/: AGENTS.md  db.rs  mod.rs  sync.rs  username.rs
(+199 files in other folders)
