[workspace]
resolver = "2"
members = ["app", "generated"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "uuid", "json"] }
validator = { version = "0.20", features = ["derive"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }
ts-rs = { version = "10", features = ["serde-compat"] }

bootstrap = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-config = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-db = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-datatable = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-mailer = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-i18n = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-jobs = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-notify = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-realtime = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
core-web = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
db-gen = { git = "https://github.com/weiloon1234/Rustforge.git", branch = "main" }
